fix(header): #MEN-1320: resize header logo on mobile

--- a/scss/moodle/header.scss
+++ b/scss/moodle/header.scss
@@ -97,6 +97,13 @@
         max-height: 81px !important;
         width: 90px;
         height: 81px;
+
+        @media(max-width: $size-mobile) {
+          max-width: 65px;
+          max-height: 56px !important;
+          width: 55px;
+          height: 56px;
+        }
       }
     }
 
